--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -143,9 +143,11 @@ target_link_libraries(${PROJECT_NAME}
 # If RealSense SDK is found the library is added and its examples compiled
 if (realsense2_FOUND)
     # print realsense directory
-    message(STATUS "RealSense SDK found in: ${realsense_INCLUDE_DIR} and ${realsense2_LIBRARY}")
+    message("RealSense SDK include found in: ${realsense2_INCLUDE_DIR}")
+    # print realsense library file directory
+    message("RealSense SDK library found in: ${realsense2_DIR}")
     include_directories(${PROJECT_NAME}
-            ${realsense_INCLUDE_DIR}
+            ${realsense2_INCLUDE_DIR}
             )
     target_link_libraries(${PROJECT_NAME}
             ${realsense2_LIBRARY}
